--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,21 @@
         android:theme="@style/Theme.JetpackComposeDynamicAddition"
         tools:targetApi="31">
         <activity
+            android:name=".MainActivity4"
+            android:exported="false"
+            android:label="@string/title_activity_main4"
+            android:theme="@style/Theme.JetpackComposeDynamicAddition" />
+        <activity
+            android:name=".MainActivity3"
+            android:exported="false"
+            android:label="@string/title_activity_main3"
+            android:theme="@style/Theme.JetpackComposeDynamicAddition" />
+        <activity
+            android:name=".MainActivity2"
+            android:exported="false"
+            android:label="@string/title_activity_main2"
+            android:theme="@style/Theme.JetpackComposeDynamicAddition" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
